--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,21 @@
 </head>
 <body>
 
-    <div class="search">
-        <div class="search-icon">
-            <img src="images/icons/search.svg" alt="Search">
+    <div class="header">
+
+        <div class="search">
+            <div class="search-icon">
+                <img src="images/icons/search.svg" alt="Search">
+            </div>
+            <input class="search__input" type="search" name="search" placeholder="Найдите нужное">
+            <a href="#" class="search-camera">
+                <img src="images/icons/camera.svg" alt="Camera">
+            </a>
         </div>
-        <input class="search__input" type="search" name="search" placeholder="Найдите нужное">
-        <a href="#" class="search-camera">
-            <img src="images/icons/camera.svg" alt="Camera">
-        </a>
+        <!-- /.search -->
+
     </div>
-    <!-- /.search -->
+    <!-- /.header -->
 
     <div class="content">
         
@@ -221,16 +226,38 @@
     <!-- /.content -->
 
     <div class="footer">
+
         <nav class="nav">
             <ul class="nav__list">
-                <li><a class="nav__link home active" href="#">Главная</a></li>
-                <li><a class="nav__link catalog" href="#">Каталог</a></li>
-                <li><a class="nav__link bag" href="#">Корзина</a></li>
-                <li><a class="nav__link user" href="#">Профиль</a></li>
+                <li>
+                    <a class="nav__link active" href="index.html">
+                        <svg class="nav__icon"><use xlink:href="images/icons/sprite.svg#home"></use></svg>
+                        Главная
+                    </a>
+                </li>
+                <li>
+                    <a class="nav__link" href="catalog.html">
+                        <svg class="nav__icon"><use xlink:href="images/icons/sprite.svg#catalog"></use></svg>
+                        Каталог
+                    </a>
+                </li>
+                <li>
+                    <a class="nav__link" href="market.html">
+                        <svg class="nav__icon"><use xlink:href="images/icons/sprite.svg#basket"></use></svg>
+                        Корзина
+                    </a>
+                </li>
+                    <li>
+                    <a class="nav__link" href="profile.html">
+                        <svg class="nav__icon"><use xlink:href="images/icons/sprite.svg#user"></use></svg>
+                        Профиль
+                    </a>
+                </li>
             </ul>
         </nav>
+
     </div>
-    <!-- /.nav -->
+    <!-- /.footer -->
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
