--- a/src/catalog-list.html
+++ b/src/catalog-list.html
@@ -29,10 +29,13 @@
 
                 <div class="catalog__cards-list">
 
-                    <a href="#" class="card">
+                    <a href="card-product.html" class="card">
                         <div class="card__img">
                             <img src="images/catalog/card-1.jpg" alt="Фотография карточки товара">
                             <div class="card__info">Крупный опт</div>
+                            <div class="card__add">
+                                <svg class="card__icon"><use xlink:href="images/icons/sprite.svg#basket"></use></svg>
+                            </div>
                         </div>
                         <h4 class="card__title">Лупа классическая 6х, d=6см, черная</h4>
                         <div class="card__price"><span>39</span> ₽</div>
@@ -40,9 +43,12 @@
                     </a>
                     <!-- /.card -->
 
-                    <a href="#" class="card">
+                    <a href="card-product.html" class="card">
                         <div class="card__img">
                             <img src="images/catalog/card-2.jpg" alt="Фотография карточки товара">
+                            <div class="card__add">
+                                <svg class="card__icon"><use xlink:href="images/icons/sprite.svg#basket"></use></svg>
+                            </div>
                         </div>
                         <h4 class="card__title">Лупа классическая 6х, d=6см, черная</h4>
                         <div class="card__price"><span>28</span> ₽</div>
@@ -53,6 +59,9 @@
                     <a href="#" class="card">
                         <div class="card__img">
                             <img src="images/catalog/card-3.jpg" alt="Фотография карточки товара">
+                            <div class="card__add">
+                                <svg class="card__icon"><use xlink:href="images/icons/sprite.svg#basket"></use></svg>
+                            </div>
                         </div>
                         <h4 class="card__title">Лупа классическая 6х, d=6см, черная</h4>
                         <div class="card__price"><span>28</span> ₽</div>
@@ -63,6 +72,9 @@
                     <a href="#" class="card">
                         <div class="card__img">
                             <img src="images/catalog/card-3.jpg" alt="Фотография карточки товара">
+                            <div class="card__add">
+                                <svg class="card__icon"><use xlink:href="images/icons/sprite.svg#basket"></use></svg>
+                            </div>
                         </div>
                         <h4 class="card__title">Лупа классическая 6х, d=6см, черная</h4>
                         <div class="card__price"><span>28</span> ₽</div>
@@ -73,6 +85,9 @@
                     <a href="#" class="card">
                         <div class="card__img">
                             <img src="images/catalog/card-3.jpg" alt="Фотография карточки товара">
+                            <div class="card__add">
+                                <svg class="card__icon"><use xlink:href="images/icons/sprite.svg#basket"></use></svg>
+                            </div>
                         </div>
                         <h4 class="card__title">Лупа классическая 6х, d=6см, черная</h4>
                         <div class="card__price"><span>28</span> ₽</div>
@@ -83,6 +98,9 @@
                     <a href="#" class="card">
                         <div class="card__img">
                             <img src="images/catalog/card-3.jpg" alt="Фотография карточки товара">
+                            <div class="card__add">
+                                <svg class="card__icon"><use xlink:href="images/icons/sprite.svg#basket"></use></svg>
+                            </div>
                         </div>
                         <h4 class="card__title">Лупа классическая 6х, d=6см, черная</h4>
                         <div class="card__price"><span>28</span> ₽</div>
@@ -93,6 +111,9 @@
                     <a href="#" class="card">
                         <div class="card__img">
                             <img src="images/catalog/card-3.jpg" alt="Фотография карточки товара">
+                            <div class="card__add">
+                                <svg class="card__icon"><use xlink:href="images/icons/sprite.svg#basket"></use></svg>
+                            </div>
                         </div>
                         <h4 class="card__title">Лупа классическая 6х, d=6см, черная</h4>
                         <div class="card__price"><span>28</span> ₽</div>
@@ -103,6 +124,9 @@
                     <a href="#" class="card">
                         <div class="card__img">
                             <img src="images/catalog/card-3.jpg" alt="Фотография карточки товара">
+                            <div class="card__add">
+                                <svg class="card__icon"><use xlink:href="images/icons/sprite.svg#basket"></use></svg>
+                            </div>
                         </div>
                         <h4 class="card__title">Лупа классическая 6х, d=6см, черная</h4>
                         <div class="card__price"><span>28</span> ₽</div>
